support android build

--- a/Makefile.in
+++ b/Makefile.in
@@ -7,6 +7,10 @@ AR ?= ar
 RUSTC ?= rustc
 RUSTFLAGS ?=
 
+ifeq ($(CFG_OSTYPE),linux-androideabi)
+RUSTFLAGS += -L./../../android/fontconfig/src/.libs
+endif
+
 RUST_SRC=$(shell find $(VPATH)/. -type f -name '*.rs')
 
 .PHONY: all
