build: android support

--- a/Makefile.in
+++ b/Makefile.in
@@ -1,11 +1,8 @@
 VPATH=%VPATH%
 
-CC ?= gcc
-CXX ?= g++
-CXXFLAGS ?=
-AR ?= ar
-RUSTC ?= rustc
-RUSTFLAGS ?=
+ifeq ($(CFG_OSTYPE),linux-androideabi)
+    RUSTFLAGS += -L./../fontconfig/src/.libs
+endif
 
 RUST_SRC=$(shell find $(VPATH)/. -type f -name '*.rs')
 
