Update for language changes

--- a/fontconfig.rc
+++ b/fontconfig.rc
@@ -18,4 +18,4 @@ pub mod fontconfig;
 #[nolink]
 #[cfg(target_os = "linux")]
 #[link_args = "-lfontconfig"]
-extern mod linkhack_linux { }
+extern { }
