--- a/Makefile.in
+++ b/Makefile.in
@@ -34,5 +34,5 @@ check: fontconfig-test
 
 .PHONY: clean
 clean:
-	rm -f *.o *.a *.so *.dylib *.dll *.dummy *-test
+	rm -f *.o *.a *.so *.dylib *.rlib *.dll *.dummy *-test
 
