--- a/fontconfig.rc
+++ b/fontconfig.rc
@@ -9,6 +9,8 @@
 
 #[crate_id = "github.com/mozilla-servo/rust-fontconfig#fontconfig:0.1"];
 #[crate_type = "lib"];
+#[crate_type = "dylib"];
+#[crate_type = "rlib"];
 
 #[feature(globs)];
 
