--- a/fontconfig.rc
+++ b/fontconfig.rc
@@ -7,7 +7,7 @@
 // option. This file may not be copied, modified, or distributed
 // except according to those terms.
 
-#![crate_id = "github.com/mozilla-servo/rust-fontconfig#fontconfig:0.1"]
+#![crate_name = "fontconfig"]
 #![crate_type = "lib"]
 #![crate_type = "dylib"]
 #![crate_type = "rlib"]
