Upgrade to rustc 1.0.0-dev (47551b574 2015-04-14) (built 2015-03-18)

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -5,3 +5,6 @@ authors = ["The Servo Project Developers"]
 
 [dependencies.fontconfig-sys]
 git = "https://github.com/servo/libfontconfig"
+
+[dependencies]
+libc = "*"
