--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,10 +1,10 @@
 [package]
 name = "fontconfig"
-version = "0.1.0"
+version = "0.1.1"
 authors = ["The Servo Project Developers"]
 
 [dependencies.fontconfig-sys]
 git = "https://github.com/servo/libfontconfig"
 
 [dependencies]
-libc = "*"
+libc = "0.1"
