Publish on crates.io

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,10 +1,11 @@
 [package]
-name = "fontconfig"
+name = "servo-fontconfig"
 version = "0.1.1"
 authors = ["The Servo Project Developers"]
-
-[dependencies.fontconfig-sys]
-git = "https://github.com/servo/libfontconfig"
+repository = "https://github.com/servo/rust-fontconfig/"
+description = "Rust bindings for fontconfig"
+license=  "MIT / Apache-2.0"
 
 [dependencies]
+servo-fontconfig-sys = "2.11.1"
 libc = "0.2"
